stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__static_analysis_tests__static_check_error_invalid_type_description.snap
---
source: stackslib/src/chainstate/tests/static_analysis_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "5017d148e606fbd8e98c57cb776111bdcb5d30543124829370d445253dccbcc0",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: invalid-type-desc-Epoch4_0-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: invalid variable definition) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 6,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1175,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 6,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1175,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "9e3142d2a1b671b98fe18ba82115bf21ba064bf85c7925da0ca319f54ec49885",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: invalid-type-desc-Epoch4_0-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: invalid variable definition) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 6,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1175,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 6,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1175,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "757218760c4b6376b63914152efce483e4f7c167938eb2913715f414e63f4489",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: invalid-type-desc-Epoch4_0-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: invalid variable definition) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 6,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1175,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 6,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1175,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "ded994e41ab773e3fd020004edf79c11d3d08ef2dfa23b529f2a9b9182cf0197",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: invalid-type-desc-Epoch4_0-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: invalid variable definition) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 6,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1175,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 6,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1175,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "12e4d572495d2a8a38ccdf064e596652dd281662c00a0535f60d4abff765cdaa",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: invalid-type-desc-Epoch4_0-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(:0:0: invalid variable definition) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 6,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1175,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 6,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1175,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "f1c927e667a43f6798abed5a7b3283a5d171ca1ab15a2efc47bfcb6d1147eb17",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: invalid-type-desc-Epoch4_0-Clarity6, code_body: [..], clarity_version: Some(Clarity6))",
        vm_error: "Some(:0:0: invalid variable definition) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 6,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1175,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 6,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1175,
    ),
  )),
]
