stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__static_analysis_tests__static_check_error_match_arms_must_match.snap
---
source: stackslib/src/chainstate/tests/static_analysis_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "66610f5effaf742a4672bce9e6275cc46f8d743cf1386b01ab8823fb06915507",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: match-arms-must-match-Epoch3_4-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: expression types returned by the arms of \'match\' must match (got \'int\' and \'bool\')) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 15,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2512,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 15,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2512,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "baf29e40f3c073a32d9d1b6064646b79dfbe266849222b8f3b89100a20db68be",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: match-arms-must-match-Epoch3_4-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: expression types returned by the arms of \'match\' must match (got \'int\' and \'bool\')) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 15,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2512,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 15,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2512,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "3f37fdee3a1348dbc323d13a37ac6aa4fc395f002c26d760c3d9f97f3a425b6b",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: match-arms-must-match-Epoch3_4-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: expression types returned by the arms of \'match\' must match (got \'int\' and \'bool\')) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 15,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2512,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 15,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2512,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "ad0d38303c56938a50c991a498cb615afdb76793abca2c1e9e751f796fc07ea5",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: match-arms-must-match-Epoch3_4-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: expression types returned by the arms of \'match\' must match (got \'int\' and \'bool\')) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 15,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2512,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 15,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2512,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "605f12eb74318d42759ea061d9b000c7cb50c8931b3efebd200998a602f37db4",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: match-arms-must-match-Epoch3_4-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(:0:0: expression types returned by the arms of \'match\' must match (got \'int\' and \'bool\')) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 15,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2512,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 15,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2512,
    ),
  )),
]
