stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__static_analysis_tests__static_check_error_max_identifier_length_exceeded.snap
---
source: stackslib/src/chainstate/tests/static_analysis_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "f12abdc0c35aed9967e1417115ee7b4389f002b2b87527ed99dc826ccb783df1",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: max-ident-len-excd-Epoch3_4-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: with-nft allowance identifiers list must not exceed 128 elements, got 130) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 142,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 16108,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 142,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 16108,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "62e3d4fd208f8296d46b18e641ac1febfa418bb110aeafcbcf58a6c44f0e251a",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: max-ident-len-excd-Epoch3_4-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(:0:0: with-nft allowance identifiers list must not exceed 128 elements, got 130) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 142,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 16108,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 142,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 16108,
    ),
  )),
]
