stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__static_analysis_tests__static_check_error_name_already_used.snap
---
source: stackslib/src/chainstate/tests/static_analysis_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "d6a7dedae120b9726b47470921b78253f0e5f6f3c8e98577c51111921c65b521",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: name-already-used-Epoch3_4-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: defining \'foo\' conflicts with previous value) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 9,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2187,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 9,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2187,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "6253e81579721d3c679ab0ace1afe30ac56e58aa86aa66613419ae06400f0bb5",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: name-already-used-Epoch3_4-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: defining \'foo\' conflicts with previous value) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 9,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2187,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 9,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2187,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "786a2c195b46203e240092f54e1485e6c0683e0ab33683f53dc24f4024b913c8",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: name-already-used-Epoch3_4-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: defining \'foo\' conflicts with previous value) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 9,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2187,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 9,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2187,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "3bc16a9b99fe46ed7037b97b12baae7c32f8b107e177a2688a1f385264dc1e24",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: name-already-used-Epoch3_4-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: defining \'foo\' conflicts with previous value) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 9,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2187,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 9,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2187,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "2355573ca6073f0dc80b3d55b2b3d671bf68cd21d613dd69e039f9d0230be502",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: name-already-used-Epoch3_4-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(:0:0: defining \'foo\' conflicts with previous value) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 9,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2187,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 9,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2187,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "aa0a81437976ddc7d30976b0b2b436446e63d884f51b61bb4a15bf092d9aaa40",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: name-already-used-Epoch4_0-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: defining \'foo\' conflicts with previous value) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 9,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2187,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 9,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2187,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "9a9f0d0ea30aa0acf3bbc2c8a13002e0ab929c2b53d3cead69118667c2f09ffd",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: name-already-used-Epoch4_0-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: defining \'foo\' conflicts with previous value) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 9,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2187,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 9,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2187,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "8969f5ed1c37ffc291d442778869e153059c66f4f4e8a185491e87aa7b937a2f",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: name-already-used-Epoch4_0-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: defining \'foo\' conflicts with previous value) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 9,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2187,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 9,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2187,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "b0797e5e3b81863e30c1b6807d2cac7b24cbaaa41f85d26a80674f9e156bbad3",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: name-already-used-Epoch4_0-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: defining \'foo\' conflicts with previous value) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 9,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2187,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 9,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2187,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "dfb7d2088cfc88a464fbdf16f89b9e1683dad43db123be6353a0142dd53e5885",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: name-already-used-Epoch4_0-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(:0:0: defining \'foo\' conflicts with previous value) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 9,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2187,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 9,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2187,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "efb9188188d3cf863408709bca601bdfe3878a89fde16481aef55198acad0bd5",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: name-already-used-Epoch4_0-Clarity6, code_body: [..], clarity_version: Some(Clarity6))",
        vm_error: "Some(:0:0: defining \'foo\' conflicts with previous value) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 9,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2187,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 9,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2187,
    ),
  )),
]
